--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,5 +1,5 @@
 @article{bickel_1992,
-  title={Inference and auditing: the Stringer bound},
+  title={Inference and auditing: the {S}tringer bound},
   author={Bickel, Peter J},
   journal={International Statistical Review/Revue Internationale de Statistique},
   pages={197--209},
@@ -44,7 +44,7 @@
 }
 @mastersthesis{buyuk_2023,
     author = {Büyük, Selim},
-    title = {Automatic Fairness Criteria and Fair Model Selection for Critical ML Tasks},
+    title = {Automatic Fairness Criteria and Fair Model Selection for Critical {ML} Tasks},
     school = {Utrecht University},
     year = {2023},
     url = {https://studenttheses.uu.nl/handle/20.500.12932/44225}
@@ -74,7 +74,7 @@
   url = {https://CRAN.R-project.org/package=fairness}
 }
 @inproceedings{calders_2010,
-  title={Three naive Bayes approaches for discrimination-free classification},
+  title={Three naive {B}ayes approaches for discrimination-free classification},
   author={Calders, Toon and Verwer, Sicco},
   booktitle={Data Mining and Knowledge Discovery},
   year={2010},
@@ -103,7 +103,7 @@
   publisher={Oliver \& Boyd}
 }
 @article{jamil_2017,
-  title={Default "Gunel and Dickey" Bayes factors for contingency tables},
+  title={Default "{G}unel and {D}ickey" {B}ayes factors for contingency tables},
   author={Jamil, Tahira and Ly, Alexander and Morey, Richard D. and Love, Jon and Marsman, Maarten and Wagenmakers, Eric-Jan},
   journal={Behavior Research Methods},
   volume={49},
@@ -136,14 +136,14 @@
   address={London}
 }
 @manual{stewart_2012,
-  title={Technical Notes on the AICPA Audit Guide Audit Sampling},
+  title={Technical Notes on the {AICPA} Audit Guide Audit Sampling},
   author={Stewart, Timothy R.},
   organization={American Institute of Certified Public Accountants},
   address={New York},
   year={2012}
 }
 @phdthesis{stewart_2013,
-  title={A Bayesian Audit Assurance Model with Application to the Component Materiality problem in Group Audits},
+  title={A {B}ayesian Audit Assurance Model with Application to the Component Materiality problem in Group Audits},
   author={Stewart, Timothy R.},
   school={VU University},
   address={Amsterdam},
@@ -151,7 +151,7 @@
   url={https://hdl.handle.net/1871/39813}
 }
 @article{derks_2021,
-  title={Priors in a Bayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency},
+  title={Priors in a {B}ayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency},
   author={Derks, Koen and de Swart, Jacques and van Batenburg, Paul and Wagenmakers, Eric-Jan and Wetzels, Ruud},
   journal={International Journal of Auditing},
   volume={25},
@@ -161,14 +161,14 @@
   doi={10.1111/ijau.12240}
 }
 @article{derks_2021b,
-  title={The Bayesian Approach to Audit Evidence: Quantifying Statistical Evidence using the Bayes Factor},
+  title={The {B}ayesian Approach to Audit Evidence: Quantifying Statistical Evidence using the Bayes Factor},
   author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
   journal={PsyArXiv},
   year={2021},
   doi={10.31234/osf.io/kzqp5}
 }
 @article{derks_2022,
-  title={An Impartial Bayesian Hypothesis Test for Audit Sampling},
+  title={An Impartial {B}ayesian Hypothesis Test for Audit Sampling},
   author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
   year={2022},
   publisher={PsyArXiv},
@@ -226,7 +226,7 @@
   doi={10.1093/biomet/66.1.125}
 }
 @article{derks_2021c,
-  title={JASP for Audit: Bayesian Tools for the Auditing Practice},
+  title={{JASP} for Audit: {B}ayesian Tools for the Auditing Practice},
   author={Derks, Koen and de Swart, Jacco and Wagenmakers, Eric-Jan and Wille, Joost and Wetzels, Ruud},
   journal={Journal of Open Source Software},
   volume={6},
@@ -283,7 +283,7 @@
   organization={Canadian Institute of Chartered Accountants}
 }
 @article{pap_1996,
-  title={On the asymptotic behaviour of the Stringer bound},
+  title={On the asymptotic behaviour of the {S}tringer bound},
   author={Pap, G. and van Zuijlen, M. C.},
   journal={Statistica Neerlandica},
   volume={50},
@@ -310,14 +310,14 @@
   year={1993}
 }
 @book{steele_1992,
-  title={Audit Risk and Audit Evidence: The Bayesian Approach to Statistical Auditing},
+  title={Audit Risk and Audit Evidence: The {B}ayesian Approach to Statistical Auditing},
   author={Steele, Andrew},
   year={1992},
   publisher={Academic Press},
   address={San Diego}
 }
 @phdthesis{talens_2005,
-  title={Statistical Auditing and the AOQL-method},
+  title={Statistical Auditing and the {AOQL}-method},
   author={Talens, E.},
   school={University of Groningen},
   address={Groningen},
@@ -342,7 +342,7 @@
   doi={10.1080/00401706.1965.10490267}
 }
 @Manual{prompers_2019,
-  title = {MUS: Monetary Unit Sampling and Estimation Methods, Widely Used in Auditing},
+  title = {{MUS}: Monetary Unit Sampling and Estimation Methods, Widely Used in Auditing},
   author = {Henning Prömpers and André Guimarães},
   year = {2019},
   note = {R package version 0.1.6},
